--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,14 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio specifics
+*.tlog
+*.idb
+*.pdb
+*.log
+*.cache
+*.lastbuildstate
+*.manifest
+*.sdf
+*.suo
