--- a/JucticeArena/JucticeArena.vcxproj
+++ b/JucticeArena/JucticeArena.vcxproj
@@ -70,10 +70,12 @@
     <ClInclude Include="Enums.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="MeleeHero.h" />
     <ClInclude Include="MovableGameObject.h" />
     <ClInclude Include="Hero.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Util.h" />
+    <ClInclude Include="Wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
