--- a/JucticeArena/JucticeArena.vcxproj
+++ b/JucticeArena/JucticeArena.vcxproj
@@ -70,13 +70,21 @@
     <ClInclude Include="Enums.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="Grass.h" />
+    <ClInclude Include="Ground.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="MapDefines.h" />
     <ClInclude Include="MeleeHero.h" />
     <ClInclude Include="MovableGameObject.h" />
     <ClInclude Include="Hero.h" />
     <ClInclude Include="RangeHero.h" />
+    <ClInclude Include="Shen.h" />
+    <ClInclude Include="ShenDefines.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Util.h" />
+    <ClInclude Include="Vectors.h" />
     <ClInclude Include="Wall.h" />
+    <ClInclude Include="Water.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
